--- a/src/main.less
+++ b/src/main.less
@@ -118,6 +118,8 @@ body {
     &:before {
       display: block;
       position: absolute;
+      top: 0;
+      left: 0;
       width: 20px;
       height: 20px;
       content: "";
