--- a/public/main.css
+++ b/public/main.css
@@ -105,6 +105,8 @@ body .substack {
 body .substack:before {
   display: block;
   position: absolute;
+  top: 0;
+  left: 0;
   width: 20px;
   height: 20px;
   content: "";
