--- a/src/main.less
+++ b/src/main.less
@@ -3,6 +3,7 @@
   src: local("Pantograph-Pro"),
     url("fonts/pantograph-variable-proportional-pro.ttf") format("truetype");
   font-weight: 100 1000;
+  font-display: swap;
 }
 
 @color: #000;
