--- a/public/main.css
+++ b/public/main.css
@@ -8,8 +8,17 @@
   margin: 0;
   padding: 0;
 }
+html {
+  font-size: 20px;
+}
+@media screen and (min-width: 900px) {
+  html {
+    font-size: 30px;
+  }
+}
 body {
   font-family: "Pantograph Pro", sans-serif;
+  font-size: 1rem;
   line-height: 115%;
   font-weight: 400;
   color: #000;
@@ -28,7 +37,7 @@ body h1 {
 }
 body h2 {
   font-variation-settings: "wdth" 125;
-  font-size: 200%;
+  font-size: 2rem;
   font-weight: 300;
   line-height: 100%;
   margin-bottom: 20px;
