--- a/src/main.less
+++ b/src/main.less
@@ -13,8 +13,15 @@
   padding: 0;
 }
 
+html { font-size: 20px; }
+
+@media screen and (min-width: 900px) {
+  html { font-size: 30px; }
+}
+
 body {
   font-family: "Pantograph Pro", sans-serif;
+  font-size: 1rem;
   line-height: 115%;
   font-weight: 400;
   color: @color;
@@ -35,7 +42,7 @@ body {
   }
   h2 {
     font-variation-settings: "wdth" 125;
-    font-size: 200%;
+    font-size: 2rem;
     font-weight: 300;
     line-height: 100%;
     margin-bottom: 20px;
