--- a/src/main.less
+++ b/src/main.less
@@ -19,6 +19,10 @@ html { font-size: 20px; }
   html { font-size: 30px; }
 }
 
+@media screen and (min-width: 2000px) {
+  html { font-size: 50px; }
+}
+
 body {
   font-family: "Pantograph Pro", sans-serif;
   font-size: 1rem;
@@ -45,7 +49,7 @@ body {
     font-size: 2rem;
     font-weight: 300;
     line-height: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 1rem;
   }
   .founded {
     font-variation-settings: "wdth" 50;
@@ -73,11 +77,11 @@ body {
     text-decoration: none;
   }
   p {
-    max-width: 360px;
+    max-width: 18rem;
     margin: 0 auto;
   }
   .address {
-    max-width: 360px;
+    max-width: 18rem;
     span {
       display: block;
     }
@@ -85,7 +89,7 @@ body {
   .aux {
     display: flex;
     & > div + div {
-      margin-left: 30px;
+      margin-left: 1.5rem;
     }
   }
 
@@ -95,7 +99,7 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    margin: 20px;
+    margin: 1rem;
     pointer-events: none;
     z-index: 100;
     h1 {
@@ -112,9 +116,9 @@ body {
   }
   section {
     position: relative;
-    width: calc(100vw - 40px);
-    height: calc(100vh - 80px);
-    padding: 60px 20px 20px;
+    width: calc(100vw - 2rem);
+    height: calc(100vh - 4rem);
+    padding: 3rem 1rem 1rem;
     // &:nth-child(even) {
     //   background: rgba(0, 0, 0, 0.01);
     // }
@@ -122,14 +126,14 @@ body {
 
   .substack {
     position: relative;
-    padding-left: 24px;
+    padding-left: 1.125rem;
     &:before {
       display: block;
       position: absolute;
       top: 0;
       left: 0;
-      width: 20px;
-      height: 20px;
+      width: 1rem;
+      height: 1rem;
       content: "";
       background: url(images/substack.svg);
       background-size: 100%;
