Three.js scene established

--- a/src/main.less
+++ b/src/main.less
@@ -30,6 +30,22 @@ body {
   font-weight: 400;
   color: @color;
 
+  #react {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    canvas {
+      opacity: 0;
+      transition: opacity 1s ease-in-out;
+      &.ready {
+        opacity: 1;
+      }
+    }
+  }
+
   #wordmark {
     span {
       display: block;
