--- a/public/main.css
+++ b/public/main.css
@@ -28,6 +28,21 @@ body {
   font-weight: 400;
   color: #000;
 }
+body #react {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
+body #react canvas {
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+body #react canvas.ready {
+  opacity: 1;
+}
 body #wordmark span {
   display: block;
 }
