--- a/public/main.css
+++ b/public/main.css
@@ -28,7 +28,7 @@ body {
   font-weight: 400;
   color: #000;
 }
-body #react {
+body #app {
   position: fixed;
   top: 0;
   left: 0;
@@ -36,16 +36,16 @@ body #react {
   bottom: 0;
   z-index: -1;
   pointer-events: none;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
 }
-body #react canvas {
+body #app canvas {
   display: block;
   position: absolute;
   top: 0;
   left: 0;
-  opacity: 0;
-  transition: opacity 1s ease-in-out;
 }
-body #react canvas.ready {
+body #app.ready {
   opacity: 1;
 }
 body #wordmark span {
