--- a/src/main.less
+++ b/src/main.less
@@ -30,7 +30,7 @@ body {
   font-weight: 400;
   color: @color;
 
-  #react {
+  #app {
     position: fixed;
     top: 0;
     left: 0;
@@ -38,16 +38,16 @@ body {
     bottom: 0;
     z-index: -1;
     pointer-events: none;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
     canvas {
       display: block;
       position: absolute;
       top: 0;
       left: 0;
-      opacity: 0;
-      transition: opacity 1s ease-in-out;
-      &.ready {
-        opacity: 1;
-      }
+    }
+    &.ready {
+      opacity: 1;
     }
   }
 
