--- a/src/main.less
+++ b/src/main.less
@@ -52,7 +52,7 @@ body {
   }
 
   #wordmark {
-    span {
+    & > span {
       display: block;
       &:last-child {
         position: absolute;
@@ -60,6 +60,9 @@ body {
         bottom: 0;
       }
     }
+    // #ampersand {
+    //   background: red;
+    // }
   }
   h1 {
     font-weight: 700;
