--- a/src/main.less
+++ b/src/main.less
@@ -1,10 +1,10 @@
-// @font-face {
-//   font-family: "Pantograph Pro";
-//   src: local("Pantograph-Pro"),
-//     url("fonts/pantograph-variable-proportional-pro.ttf") format("truetype");
-//   font-weight: 100 1000;
-//   font-display: swap;
-// }
+@font-face {
+  font-family: "Pantograph Pro";
+  src: local("Pantograph-Pro"),
+    url("fonts/pantograph-variable-proportional-pro.ttf") format("truetype");
+  font-weight: 100 1000;
+  font-display: swap;
+}
 
 @color: #000;
 
@@ -161,4 +161,8 @@ body {
       background-repeat: no-repeat;
     }
   }
+}
+
+.hidden {
+  display: none;
 }
