Remove meta to check pagespeed

--- a/public/main.css
+++ b/public/main.css
@@ -149,6 +149,7 @@ body .substack:before {
   background-position: center;
   background-repeat: no-repeat;
 }
+.scripts,
 .hidden {
   display: none;
 }
