Potential fix for mobile scrolling

--- a/public/main.css
+++ b/public/main.css
@@ -44,6 +44,8 @@ body #app canvas {
   position: absolute;
   top: 0;
   left: 0;
+  width: 100% !important;
+  height: 100% !important;
 }
 body #app.ready {
   opacity: 1;
