--- a/src/main.less
+++ b/src/main.less
@@ -45,6 +45,8 @@ body {
       position: absolute;
       top: 0;
       left: 0;
+      width: 100% !important;
+      height: 100% !important;
     }
     &.ready {
       opacity: 1;
