--- a/src/main.less
+++ b/src/main.less
@@ -29,6 +29,22 @@ body {
   line-height: 115%;
   font-weight: 400;
   color: @color;
+  position: fixed;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+
+  #scroll-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
+    z-index: 1;
+  }
 
   #app {
     position: fixed;
