--- a/src/main.less
+++ b/src/main.less
@@ -29,6 +29,7 @@ body {
   line-height: 115%;
   font-weight: 400;
   color: @color;
+  -webkit-overflow-scrolling: touch;
 
   #app {
     position: fixed;
