--- a/src/main.less
+++ b/src/main.less
@@ -126,6 +126,7 @@ body {
     margin: 1rem;
     pointer-events: none;
     z-index: 100;
+    display: none;
     h1 {
       position: absolute;
       left: 0;
